# kotlinrs

./: Cargo.toml  README.md
.github/workflows/: release.yml
completions/: _kotlin
docs/: index.html  reference.html  report.html
examples/: fib.kt  fizzbuzz.kt  hello.kt  loops.kt
man/: kotlin.1
man/man1/: kotlin.1  kotlinall.1
src/: ast.rs  cli.rs  compiler.rs  dap.rs  host.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  runtime.rs  rust_ffi.rs  token.rs
tests/: lang.rs
