[package]
name = "kotlinrs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
description = "Kotlin as a fusevm frontend: lexer, parser, and compiler to fusevm::Chunk on a KtHost heap — the first compiled standalone Kotlin runtime, no JVM"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/kotlinrs"
homepage = "https://menketechnologies.github.io/kotlinrs/"
documentation = "https://docs.rs/kotlinrs"
readme = "README.md"
keywords = ["kotlin", "interpreter", "compiler", "jit", "fusevm"]
categories = ["command-line-utilities", "compilers"]
publish = true
# Dev-only artifacts kept out of the published crate. Consumers get src + the
# `kotlin`/dump bins, the man page, and shell completions — not the HUD site, CI
# config, integration-test corpus, or self-test .kt examples. None are referenced
# at compile time (no include_str! into them), so the packaged crate still builds.
exclude = [
    "/docs/",
    "/.github/",
    "/tests/",
    "/examples/",
]

# kotlinrs is a standalone crate, not a workspace member. An explicit empty
# `[workspace]` stops cargo walking up to the MenkeTechnologiesMeta parent.
[workspace]

[lib]
name = "kotlinrs"
path = "src/lib.rs"

[[bin]]
name = "kotlin"
path = "src/main.rs"

# Offline generator for docs/reference.html — renders the keyword/builtin/type
# reference (src/lsp.rs corpus) as a static page. Run before publishing Pages.
[[bin]]
name = "gen-docs"
path = "src/bin/gen_docs.rs"

[dependencies]
# Kotlin executes on fusevm. kotlinrs is a pure frontend: it lowers Kotlin to
# fusevm bytecode (src/compiler.rs) and hosts Kotlin-specific coercions
# (src/host.rs, reached from fusevm's extension handler) that the language-
# agnostic ops can't express — Kotlin `Boolean`/`Double` display form and
# truncating integer `/`/`%` (fusevm's native `Div` is always-float).
#
# `jit` turns on fusevm's three-tier Cranelift JIT so arithmetic and comparison
# operators — which kotlinrs lowers to *native* fusevm ops — can be block- and
# trace-compiled on hot loops instead of dispatched.
#
# `ffi` enables fusevm's inline-Rust FFI bridge: a `rust { pub extern "C" fn … }`
# block compiles to a cached cdylib whose exported functions become callable by
# name from Kotlin (src/rust_ffi.rs desugars the block; src/host.rs routes the
# `__rust_compile` / by-name-call dispatch into `fusevm::ffi`).
fusevm = { version = "0.14.12", features = ["jit", "ffi"] }

# LSP (`kotlin --lsp`) + DAP (`kotlin --dap`) over stdio. libc gives the DAP
# server a pipe + dup2 to capture the debuggee's stdout (println) so program
# output streams as `output` events instead of corrupting the JSON-RPC channel.
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
